# silero-server

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  app.py  config.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  silero-to-mary-config.yml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
.scratch/cache-cleaner-fix/: 01-unit-tests-and-logging.md  02-fix-cleaner-worker-sentinel-handling.md  03-fix-close-to-await-clear.md
.scratch/config/: 01-config.md  03-rename-concurrency-config.md
.scratch/config-storage/: 01-define-storage-interface-and-yaml-implementation.md  02-replace-config-model-with-storage-in-engine.md  03-add-engine-wiring-in-deps-and-lifespan.md
.scratch/context-md-refactor/: 01-project-identity-and-core-terms.md  02-integration-layer-voice-locale-wyoming.md  03-chunk-and-polish.md
.scratch/derive-locale-language/: 01-derive-locale-language.md
.scratch/device-cache/: 01-device-resolution.md  02-extract-resolve-device.md
.scratch/disable-models/: 001-add-enabled-field-and-filtering.md  002-parse-enabled-from-yaml.md
.scratch/docs-config-annotations/: annotate-config-yml-fields.md
.scratch/docs-env-example/: update-env-example.md
.scratch/docs-readme-refactor/: rewrite-readme-config-and-domain.md
.scratch/docs-refactor/: 001-rewrite-context-md-as-glossary.md  002-document-yaml-config-schema-in-readme.md  003-document-api-endpoints-in-readme.md  004-add-customization-guide-to-readme.md
.scratch/drop-locale-dataclass/: 01-add-locale-string-helper.md  02-drop-locale-dataclass.md
.scratch/drop-shutdown-timeout/: 01-drop-tts-shutdown-timeout.md
.scratch/drop-voice-gender/: 01-drop-voice-gender.md
.scratch/env-config-missing-model-dir/: 01-add-missing-env-var.md
.scratch/env-type/: 01-add-tts-env-type-to-settings.md  02-wire-development-error-detail.md
.scratch/env-var-coercion/: 01-fix-tts-sample-rate-string-coercion.md
.scratch/env-vars-for-uri-zeroconf/: 01-add-uri-zeroconf-to-settings.md  02-remove-argparse-wire-env-vars.md
.scratch/exception-simplification/: 01-simplify-exceptions-and-engine-api.md  02-move-validation-to-endpoint.md  03-update-documentation.md  04-move-global-exception-handler.md
.scratch/extract-deps/: 01-extract-deps-to-separate-file.md
.scratch/fix-router-test-mocks/: 01-fix-mock-setup-in-router-tests.md
.scratch/fix-tests/: 01-fix-get-supported-text-formats-return-type.md  02-fix-collect-chunks-helper-and-synthesize-validation-test.md  03-fix-disabled-model-get-model-test-expectation.md  04-fix-sentenizer-return-types.md  05-fix-ssml-tag-splitting-regex.md  06-fix-engine-test-factory-parameter.md  07-rewrite-text-ssml-test-file.md  08-rewrite-russian-text-test-file.md  09-adopt-text-ssml-sentenizer-tests-to-iterator.md  10-adopt-russian-sentenizer-tests-to-iterator.md
.scratch/flush-denormal-cli-docs/: 01-update-cli-flag-name-in-readme.md
.scratch/foundation/: remove-tts-model-path.md  stage-0-foundation.md
.scratch/health-endpoint-path/: 01-move-health-endpoint-to-root.md  02-update-operational-references.md
.scratch/locale-voice-restructure/: 01-dataclass-storage-endpoints.md  02-update-core-concept-docs.md  03-change-locales-dict-storage.md  04-exclude-locales-without-usable-voices.md  05-voice-availability-rule.md
.scratch/model-cache-eviction/: 01-slice-1.md
.scratch/model-core-concept/: 01-add-model-name-field.md  02-refactor-models-storage-dict-to-list.md  03-change-get-models-return-type-to-list.md  refactor-models-storage-dict-to-list.md
.scratch/model-hash-prefix/: 01-add-hash-prefix-to-model.md  02-document-hash-prefix-in-model-concept.md
.scratch/model-warmup/: 01-warmup-configuration-schema-and-storage.md  02-warmup-engine-feature-and-lifespan.md
.scratch/models-yml-config/: 01-migrate-models-yml-url-and-hash-to-env-config.md  02-skip-models-yml-hash-validation-when-empty.md
.scratch/move-get-settings/: 01-move-get-settings-to-config.md
.scratch/move-select-sample-rate/: 01-move-select-sample-rate-to-silero-tts-engine.md
.scratch/move-tts-result-to-models/: 01-move-tts-result-to-models.md
.scratch/optional-speaker-field/: 01-optional-speaker-in-yaml-with-fallback-to-voice-name.md
.scratch/readme-cleanup/: 01-remove-project-structure-update-ci-text.md  02-modernize-ci-workflow.md
.scratch/refactor-tests/: 01-create-shared-test-infrastructure.md  01-is-closed-and-idempotent-close.md  02-eviction-callback-tests-no-private-access.md  02-fix-config-test-assertions.md  03-refactor-config-storage-and-model-tests.md  03-timing-based-eviction-test.md  04-closed-cache-put-raises.md  04-refactor-engine-and-preprocessor-tests.md
.scratch/remove-engine-delegation/: 01-remove-engine-delegating-methods-and-update-docs.md
.scratch/remove-provider/: 01-add-models-dir-config.md  02-inline-provider-into-engine.md
.scratch/rename-chunk-to-sentence/: 01-add-chunk-glossary.md  02-rename-max-chunk-chars-config.md  03-rename-sentenizer-internals.md  04-rename-max-concurrent-chunks-per-request.md  05-rename-max-concurrent-per-model.md
.scratch/rename-data-yml-path/: 01-core-rename.md  02-docs-update.md
.scratch/rename-engine-module/: 01-rename-source-module.md  02-rename-test-file.md
.scratch/rename-get_locales/: 01-get_locales_in_voices.md
data/: data.yml
docs/: mary-tts-core-endpoints.md  tensor-to-wav-bytes.md
src/: __init__.py  config.py  deps.py  handler.py  handlers.py  logger.py  main.py
tests/: conftest.py  helpers.py  test_cache.py  test_config.py  test_config_storage.py  test_engine.py  test_engine_factory.py  test_env_example.py  test_health.py  test_openai_text_normalizer.py  test_provider.py  test_routers.py  test_ru_text_preprocessor.py  test_ru_text_sentenizer.py  test_silero_tts_engine.py  test_text.py  test_text_normalizer.py  test_text_normalizer_factory.py  test_text_preprocessor.py  test_text_sentenizer.py  test_tts_models.py  test_voice_normalization_e2e.py
(+103 files in other folders)
