[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silero-server"
version = "0.1.0"
description = "A simple, robust, and performant Wyoming protocol TTS server that wraps the Silero TTS engine"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dmitry Kiselev", email = "dmitry@example.com"}]
keywords = ["wyoming", "silero", "tts"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "torch==2.12.1",
    "numpy==2.4.6",
    "pyyaml==6.0.3",
    "loguru>=0.7.3",
    "razdel>=0.5.0",
    "wyoming>=1.9.0",
    "zeroconf>=0.149.16",
]

[project.urls]
Homepage = "https://github.com/dkindev/silero-server"
Repository = "https://github.com/dkindev/silero-server"
Issues = "https://github.com/dkindev/silero-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    ".dist",
    "models",
    "data"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "asyncio: marks tests as async",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
